<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dgutierrez.warehouse.PedidosActivityB">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

        <item android:id="@+id/add"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_add" />

        <item android:id="@+id/edit"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_edit" />

        <item android:id="@+id/delete"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/menu_delete" />

</menu>
